specify favicon and web clip name+icon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-title" content="Kaitlyn+Matt">
+    <link rel="icon" href="images/kaitlyn-and-matt.jpg">
+    <link rel="shortcut icon" href="images/kaitlyn-and-matt.jpg">
+    <link rel="apple-touch-icon" href="images/kaitlyn-and-matt.jpg">
     <link href='stylesheets/reset.css' rel='stylesheet' type='text/css'>
     <link href='stylesheets/base.css' rel='stylesheet' type='text/css'>
     <title>Kaitlyn and Matt</title>
