--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
           <h3>Friday, May 29, 2015</h3>
           <table>
             <tr>
+              <td class="time">5pm</td>
+              <td>
+                <span class="wedding-event">Rehearsal (Bridal Party)</span>
+                St. Peter's Catholic Church on Capitol Hill<br>
+                313 2nd St SE<br>
+                Washington, DC 20003
+              </td>
+            </tr>
+            <tr>
               <td class="time">6pm</td>
               <td>
                 <span class="wedding-event">Rehearsal Dinner (Bridal Party)</span>
