add html5shiv for IE

--- a/washington-dc.html
+++ b/washington-dc.html
@@ -9,6 +9,9 @@
     <link href='stylesheets/reset.css' rel='stylesheet' type='text/css'>
     <link href='stylesheets/base.css' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400|Oswald:400' rel='stylesheet' type='text/css'>
+    <!--[if lt IE 9]>
+    <script src="javascripts/html5shiv.js"></script>
+    <![endif]-->
     <title>Washington, D.C. | Kaitlyn and Matt</title>
   </head>
   <body>
