add indicator for primary hotel

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
           <li>
             <span class="hotel-name">
               <a href="https://reservations.ihotelier.com/crs/g_reservation.cfm?groupID=1304410&hotelID=75979">Phoenix Park Hotel</a>
+              (primary hotel)
             </span>
             520 North Capitol St NW<br>
             Washington, DC 20001<br>
