--- a/travel-and-accommodations.html
+++ b/travel-and-accommodations.html
@@ -42,7 +42,8 @@
           <ul class="hotels">
             <li>
               <span class="hotel-name">
-                <a href="https://reservations.ihotelier.com/crs/g_reservation.cfm?groupID=1304410&hotelID=75979">Phoenix Park Hotel</a>
+                <a href="https://reservations.ihotelier.com/crs/g_reservation.cfm?groupID=1304410&hotelID=75979">Phoenix Park Hotel</a><br>
+                (Primary Hotel)
               </span>
               520 North Capitol St NW<br>
               Washington, DC 20001<br>
